--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -971,6 +971,11 @@ select {
   line-height: 2.5rem;
 }
 
+.text-3xl {
+  font-size: 1.6875rem;
+  line-height: 1.875rem;
+}
+
 .text-sm\/6 {
   font-size: 0.875rem;
   line-height: 1.5rem;
